⚡️ brute force the parallel way